--- a/empireo.css
+++ b/empireo.css
@@ -1,22 +1,73 @@
-/**
-	Doadores
+/*
+	Servidor
 */
 
-.userPopout-xaxa6l[data-user-id="193188089756123136"] .profileBadges-ohc0Vu::before, .userPopout-xaxa6l[vz-user-id="193188089756123136"] .profileBadges-ohc0Vu::before,
-.userPopout-xaxa6l[data-user-id="292355615798591488"] .profileBadges-ohc0Vu::before, .userPopout-xaxa6l[vz-user-id="292355615798591488"] .profileBadges-ohc0Vu::before,
-.userPopout-xaxa6l[data-user-id="281376608038813696"] .profileBadges-ohc0Vu::before, .userPopout-xaxa6l[vz-user-id="281376608038813696"] .profileBadges-ohc0Vu::before,
-.userPopout-xaxa6l[data-user-id="269939624401436672"] .profileBadges-ohc0Vu::before, .userPopout-xaxa6l[vz-user-id="269939624401436672"] .profileBadges-ohc0Vu::before,
-.userPopout-xaxa6l[data-user-id="229598810614136832"] .profileBadges-ohc0Vu::before, .userPopout-xaxa6l[vz-user-id="229598810614136832"] .profileBadges-ohc0Vu::before,
-.userPopout-xaxa6l[data-user-id="817264844411502603"] .profileBadges-ohc0Vu::before, .userPopout-xaxa6l[vz-user-id="817264844411502603"] .profileBadges-ohc0Vu::before,
-.userPopout-xaxa6l[data-user-id="303880582331629569"] .profileBadges-ohc0Vu::before, .userPopout-xaxa6l[vz-user-id="303880582331629569"] .profileBadges-ohc0Vu::before,
-.userPopout-xaxa6l[data-user-id="303880582331629569"] .profileBadges-ohc0Vu::before, .userPopout-xaxa6l[vz-user-id="303880582331629569"] .profileBadges-ohc0Vu::before,
-.userPopout-xaxa6l[data-user-id="442661470770167838"] .profileBadges-ohc0Vu::before, .userPopout-xaxa6l[vz-user-id="442661470770167838"] .profileBadges-ohc0Vu::before,
-.userPopout-xaxa6l[data-user-id="148883925270396929"] .profileBadges-ohc0Vu::before, .userPopout-xaxa6l[vz-user-id="148883925270396929"] .profileBadges-ohc0Vu::before,
-.userPopout-xaxa6l[data-user-id="ID001"] .profileBadges-ohc0Vu::before, .userPopout-xaxa6l[vz-user-id="ID001"] .profileBadges-ohc0Vu::before,
-.userPopout-xaxa6l[data-user-id="233787027517210624"] .profileBadges-ohc0Vu::before, .userPopout-xaxa6l[vz-user-id="233787027517210624"] .profileBadges-ohc0Vu::before,
-.userPopout-xaxa6l[data-user-id="751092600890458203"] .profileBadges-ohc0Vu::before, .userPopout-xaxa6l[vz-user-id="751092600890458203"] .profileBadges-ohc0Vu::before,
-.userPopout-xaxa6l[data-user-id="289782983357890571"] .profileBadges-ohc0Vu::before, .userPopout-xaxa6l[vz-user-id="289782983357890571"] .profileBadges-ohc0Vu::before,
-.userPopout-xaxa6l[data-user-id="478881945020006402"] .profileBadges-ohc0Vu::before, .userPopout-xaxa6l[vz-user-id="478881945020006402"] .profileBadges-ohc0Vu::before {
+@charset "UTF-8";
+.container-3w7J-x[aria-label*="Empíreo"] .header-2V-4Sw {
+  height: 150px;
+  padding: 16px;
+  align-items: flex-start;
+}
+
+
+.container-3w7J-x[aria-label*="Empíreo"] .header-2V-4Sw::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  background: url("https://cdn.discordapp.com/attachments/777528718855110696/898734965422948382/Banner.png") center/cover no-repeat;
+  -webkit-mask: linear-gradient(#000000, transparent);
+}
+
+.headerButton-3in1-b[aria-label^="Empíreo"]::before {
+  content: "";
+  position: fixed;
+  left: -20px;
+  bottom: 0;
+  width: 130px;
+  height: 150px;
+  background: url("https://i.imgur.com/Onsi6Ft.png") center/100% no-repeat;
+  pointer-events: none;
+  opacity: 0.8;
+  transform: scaleX(-1) scaleY(-1);
+}
+.headerButton-3in1-b[aria-label^="Empíreo"]::after {
+  content: "";
+  position: fixed;
+  right: 10px;
+  bottom: 0;
+  width: 50px;
+  height: 50px;
+  background: url("https://i.imgur.com/eNgL05o.png") center/100% no-repeat;
+  pointer-events: none;
+}
+
+.blobContainer-pmnxKB[data-dnd-name="Empíreo"]:hover .icon-27yU2q[src^="https://cdn.discordapp.com/icons/811203761619337259/cbbe557dad5f5f43e5dea3f9e7a75e14"] {
+  content: url("https://i.imgur.com/HKhLifk.gif");
+}
+
+/*
+	Nomes coloridos por cargo
+*/
+.membersGroup-v9BXpm[aria-label*="Sentinela👑"] ~ .member-3-YXUe .roleColor-rz2vM0[style="color: rgb(255, 203, 65);"] {
+  color: transparent !important;
+  font-weight: bold;
+  background-size: 300%;
+  background-image: linear-gradient(-60deg, #3A32DF 0%, #3149E3 10%, #315CE4 20%, #3B6DE3 30%, #4B7CE0 40%, #4B7CE0 50%, #3B6DE3 60%, #315CE4 70%, #3149E3 80%, #3A32DF 90%, #3A32DF 100%);
+  animation: shine 10s linear infinite;
+  -webkit-background-clip: text;
+}
+
+/*
+	Nomes coloridos por ID
+*/
+/*
+	Tet Morningstar
+*/
+.userPopout-xaxa6l[data-user-id="292355615798591488"] .profileBadges-ohc0Vu::before, .userPopout-xaxa6l[vz-user-id="292355615798591488"] .profileBadges-ohc0Vu::before {
   content: "";
   position: relative;
   width: 20px;
@@ -26,21 +77,7 @@
   background: url("https://cdn.discordapp.com/attachments/755137948529328138/897267532589834280/sparkles_2728.png") center/100% no-repeat;
 }
 
-.member-3-YXUe .wrapper-3t9DeA[data-user-id="193188089756123136"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="193188089756123136"]::before,
-.member-3-YXUe .wrapper-3t9DeA[data-user-id="292355615798591488"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="292355615798591488"]::before,
-.member-3-YXUe .wrapper-3t9DeA[data-user-id="281376608038813696"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="281376608038813696"]::before,
-.member-3-YXUe .wrapper-3t9DeA[data-user-id="269939624401436672"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="269939624401436672"]::before,
-.member-3-YXUe .wrapper-3t9DeA[data-user-id="229598810614136832"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="229598810614136832"]::before,
-.member-3-YXUe .wrapper-3t9DeA[data-user-id="817264844411502603"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="817264844411502603"]::before,
-.member-3-YXUe .wrapper-3t9DeA[data-user-id="303880582331629569"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="303880582331629569"]::before,
-.member-3-YXUe .wrapper-3t9DeA[data-user-id="562386647828791311"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="562386647828791311"]::before,
-.member-3-YXUe .wrapper-3t9DeA[data-user-id="442661470770167838"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="442661470770167838"]::before,
-.member-3-YXUe .wrapper-3t9DeA[data-user-id="148883925270396929"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="148883925270396929"]::before,
-.member-3-YXUe .wrapper-3t9DeA[data-user-id="ID001"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="ID001"]::before,
-.member-3-YXUe .wrapper-3t9DeA[data-user-id="233787027517210624"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="233787027517210624"]::before,
-.member-3-YXUe .wrapper-3t9DeA[data-user-id="751092600890458203"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="751092600890458203"]::before,
-.member-3-YXUe .wrapper-3t9DeA[data-user-id="289782983357890571"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="289782983357890571"]::before,
-.member-3-YXUe .wrapper-3t9DeA[data-user-id="478881945020006402"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="478881945020006402"]::before {
+.member-3-YXUe .wrapper-3t9DeA[data-user-id="229598810614136832"]::before, .member-3-YXUe .wrapper-3t9DeA[vz-user-id="229598810614136832"]::before {
   content: "";
   position: absolute;
   width: 18px;
@@ -53,6 +90,30 @@
   border-radius: 0 5px 0 0;
   pointer-events: none;
 }
+
+.message-2qnXI6[data-user-id="229598810614136832"] > :not(.repliedMessage-VokQwo) .username-1A8OIy,
+.message-2qnXI6[data-author-id="229598810614136832"] > :not(.repliedMessage-VokQwo) .username-1A8OIy,
+.message-2qnXI6[vz-user-id="229598810614136832"] .username-1A8OIy,
+.channel-2QD9_O[data-user-id="229598810614136832"] .overflow-WK9Ogt,
+.channel-2QD9_O[vz-user-id="229598810614136832"] .overflow-WK9Ogt,
+.member-3-YXUe[data-user-id="229598810614136832"] .roleColor-rz2vM0,
+.member-3-YXUe[vz-user-id="229598810614136832"] .roleColor-rz2vM0,
+.userPopout-xaxa6l[data-user-id="229598810614136832"] .username-2b1r56,
+.userPopout-xaxa6l[vz-user-id="229598810614136832"] .username-2b1r56,
+.root-3QyAh1[data-user-id="229598810614136832"] .username-2b1r56 {
+  color: transparent !important;
+  font-weight: bold;
+  background-size: 300%;
+  animation: shine 10s linear infinite;
+  -webkit-background-clip: text;
+    background-image: linear-gradient(56deg, #dfc13f 0%, #f63939 33%, #3e099d 66%, #dfc13f 99%);
+}
+
+
+
+
+
+
 
 .message-2qnXI6[data-user-id="193188089756123136"] > :not(.repliedMessage-VokQwo) .username-1A8OIy,
 .message-2qnXI6[data-author-id="193188089756123136"] > :not(.repliedMessage-VokQwo) .username-1A8OIy,
@@ -124,24 +185,6 @@
   animation: shine 10s linear infinite;
   -webkit-background-clip: text;
   background-image: linear-gradient(-60deg, #360167, #6B0772, #AF1281, #CF268A, #AF1281, #6B0772, #360167);
-}
-
-.message-2qnXI6[data-user-id="229598810614136832"] > :not(.repliedMessage-VokQwo) .username-1A8OIy,
-.message-2qnXI6[data-author-id="229598810614136832"] > :not(.repliedMessage-VokQwo) .username-1A8OIy,
-.message-2qnXI6[vz-user-id="229598810614136832"] .username-1A8OIy,
-.channel-2QD9_O[data-user-id="229598810614136832"] .overflow-WK9Ogt,
-.channel-2QD9_O[vz-user-id="229598810614136832"] .overflow-WK9Ogt,
-.member-3-YXUe[data-user-id="229598810614136832"] .roleColor-rz2vM0,
-.member-3-YXUe[vz-user-id="229598810614136832"] .roleColor-rz2vM0,
-.userPopout-xaxa6l[data-user-id="229598810614136832"] .username-2b1r56,
-.userPopout-xaxa6l[vz-user-id="229598810614136832"] .username-2b1r56,
-.root-3QyAh1[data-user-id="229598810614136832"] .username-2b1r56 {
-  color: transparent !important;
-  font-weight: bold;
-  background-size: 300%;
-  animation: shine 10s linear infinite;
-  -webkit-background-clip: text;
-    background-image: linear-gradient(56deg, #dfc13f 0%, #f63939 33%, #3e099d 66%, #dfc13f 99%);
 }
 
 .message-2qnXI6[data-user-id="817264844411502603"] > :not(.repliedMessage-VokQwo) .username-1A8OIy,
@@ -325,37 +368,4 @@
   to {
     background-position: -300% center;
   }
-}
-
-/**
-	Servidor
-*/
-
-@charset "UTF-8";
-.container-3w7J-x[aria-label*="Empíreo"] .header-2V-4Sw {
-  height: 150px;
-  padding: 16px;
-  align-items: flex-start;
-}
-
-
-.container-3w7J-x[aria-label*="Empíreo"] .header-2V-4Sw::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  width: 100%;
-  height: 100%;
-  background: url("https://cdn.discordapp.com/attachments/777528718855110696/898734965422948382/Banner.png") center/cover no-repeat;
-  -webkit-mask: linear-gradient(#000000, transparent);
-}
-
-.membersGroup-v9BXpm[aria-label*="Sentinela👑"] ~ .member-3-YXUe .roleColor-rz2vM0[style="color: rgb(252, 225, 0);"] {
-  color: transparent !important;
-  font-weight: bold;
-  background-size: 300%;
-  animation: shine-reversed 10s linear infinite;
-  -webkit-background-clip: text;
-  background-image: linear-gradient(90deg, #19191b 0%, #deaf9d 33%, #eb6f92 66%, #19191b 100%);
 }
